[fix] tab grid gap

--- a/blocks/priority-list/priority-list.css
+++ b/blocks/priority-list/priority-list.css
@@ -257,6 +257,7 @@
 @media (width >=768px) and (width <= 1024px) {
   .priority-list-wrapper .priority-list {
     grid-template-columns: repeat(2, 1fr);
+    gap: 0px;
   }
 
   .priority-list-wrapper
